// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <div>
    <div
      class="_wrap_1o7x9_54"
    >
      <div
        class="_rightNav_1o7x9_77"
      >
        <div>
          Ponti UI
        </div>
      </div>
      <div
        class="_leftNav_1o7x9_76"
      >
        <div>
          Account
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <div>
    <div
      class="_wrap_1o7x9_54"
    >
      <div
        class="_rightNav_1o7x9_77"
      >
        <div>
          Ponti UI
        </div>
      </div>
      <div
        class="_leftNav_1o7x9_76"
      >
        <button
          class="_wrap_1hyw7_54 _text_1hyw7_80"
          data-testid="loginButton"
          type="button"
        >
          Get Started
        </button>
      </div>
    </div>
  </div>
</div>
`;
